--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^4.0.0",
+        "datatables.net-responsive-dt": "^2.4.0",
+        "datatables.net-vue3": "^2.0.0",
         "pinia": "^2.0.30",
         "vue": "^3.2.36",
         "vue-loader": "^17.0.1",
