--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "vue-loader": "^17.0.1",
         "vue-router": "^4.0.13",
         "vue-select": "^4.0.0-beta.6",
+        "vue-spinner": "^1.0.4",
         "vue-sweetalert2": "^5.0.5",
         "vue-toastification": "^2.0.0-rc.5"
     }
